@@ -1,3 +1,5 @@
+- Util: Fix syntax to be compatible with PHP 5.3.
+
 ---------------------------------------------
 1.1.6 (2015-06-29)
 
